kubernetes/homepage/homepage.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homepage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  namespace: homepage
spec:
  replicas: 3
  selector:
    matchLabels:
      name: homepage
  template:
    metadata:
      labels:
        name: homepage
    spec:
      containers:
        - name: homepage
          image: docker.io/clincha/homepage:0.0.1
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: homepage
spec:
  selector:
    name: homepage
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  namespace: homepage
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
spec:
  tls:
    - secretName: homepage-certificate-secret
  rules:
    - host: clincha.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
